--- a/css/main.css
+++ b/css/main.css
@@ -66,35 +66,27 @@ nav {
 
 .menu-item {
   display: inline-block;
-  padding: 10px 50px;
 }
 
 .menu-item:hover {
   background-color: #e0e0e0;
-  cursor: pointer;
 }
 
 .menu-button {
-  cursor: pointer;
   font-family: "Audiowide", cursive;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 1.5em;
   text-shadow: 0 0 10px white;
-  border: none;
-  background: none;
-  width: 100%;
-  height: 30px;
-}
-
-.menu-button:focus {
-  outline: 0;
+  color: black;
+  text-decoration: none;
+  padding: 10px 50px;
 }
 
 .fixed-header {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 0;  
 }
 
 /*        *
