--- a/css/main.css
+++ b/css/main.css
@@ -282,12 +282,13 @@ footer {
 }
 
 #copyright {
-  width: 80%;
+  width: 60%;
   text-align: left;
+  font-size: 0.6em;
 }
 
 #social {
-  width: 20%;
+  width: 40%;
   text-align: right;
 }
 
