--- a/css/main.css
+++ b/css/main.css
@@ -306,30 +306,27 @@ a.fab {
 @media screen and (max-width: 799px) {
   /*  Mobile Menu  */
 
-  .menu-list {
+   .menu-list {
     position: absolute;
-    width: 220px;
     background-color: #536dfe;
     box-shadow: 3px 3px 3px black;
     border-bottom-right-radius: 20px;
-    top: 45px;
+    top: 44px;
     transform: translateX(-999px);
+    text-align: left;
   }
   .menu-item {
     display: block;
-    width: 108px;
-    text-shadow: none;
   }
   .menu-item:hover {
-    background-color: #536dfe;
-    color: red;
+    background: none;
   }
   .menu-button:hover {
-    color: #ad1457;
-    text-shadow: none;
+    color: #AD1457;
   }
   .menu-button {
     text-shadow: none;
+    padding: 10px 20px 10px 10px;
   }
 }
 
@@ -349,6 +346,9 @@ a.fab {
   .form-item {
     width: 80%;
   }
+  #copyright {
+    font-size 0.8em;
+  }
 }
 
 @media screen and (min-width: 1100px) {
@@ -361,6 +361,9 @@ a.fab {
   }
   .project-item {
     width: 33%;
+  }
+  #copyright {
+    font-size 0.9em;
   }
 }
 
