--- a/css/main.css
+++ b/css/main.css
@@ -41,11 +41,11 @@ section {
 }
 
 /*            *
- *            *
- *            *
- * Navigation *
- *            *
- *            */
+   *            *
+   *            *
+   * Navigation *
+   *            *
+   *            */
 
 nav {
   padding: 0;
@@ -92,8 +92,9 @@ nav {
 
 /* Fix padding on anchor links */
 
-h2::before, #about-anchor::before {
-  content: ' ';
+h2::before,
+#about-anchor::before {
+  content: " ";
   display: block;
   height: 60px;
   margin-top: -60px;
@@ -102,12 +103,11 @@ h2::before, #about-anchor::before {
 }
 
 /*        *
- *        *
- *        *
- * Header *
- *        *
- *        */
-
+   *        *
+   *        *
+   * Header *
+   *        *
+   *        */
 
 header {
   width: 100%;
@@ -155,11 +155,11 @@ h3 {
 }
 
 /*              *
- *              *
- *  First/About *
- *  Section     *
- *              *
- *              */
+   *              *
+   *  First/About *
+   *  Section     *
+   *              *
+   *              */
 
 #about-section {
   width: 100%;
@@ -177,13 +177,13 @@ h3 {
 }
 
 /*          *
- *          *
- * Projects *
- * Section  *
- *          *
- *          */
+   *          *
+   * Projects *
+   * Section  *
+   *          *
+   *          */
 
-#projects {
+#projects-container {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -196,7 +196,8 @@ h3 {
   border-radius: 50%;
 }
 
-.project-image:hover, .hoverImage {
+.project-image:hover,
+.hoverImage {
   border: 8px solid white;
   box-shadow: 1px 1px 10px black;
   cursor: pointer;
@@ -220,11 +221,19 @@ h3 {
 }
 
 /*               *
- *               *
- * Forms/Contact *
- * Section       *
- *               *
- *               */
+   *               *
+   * Forms/Contact *
+   * Section       *
+   *               *
+   *               */
+
+label {
+  font-weight: bold;
+}
+
+input {
+  width: 100%;
+}
 
 #contact {
   width: 95%;
@@ -237,67 +246,19 @@ h3 {
   padding-bottom: 25px;
 }
 
-.label {
-  font-weight: bold;
-}
-
 .label,
 .form-item {
   width: 100%;
 }
 
-input {
-  width: 100%;
-  border-radius: 20px;
-  padding: 5px;
-  box-sizing: border-box;
-  background-color: #FFFDE7;
-  border: 1px solid black;
-  box-shadow: 1px 1px 5px black;
-}
-
-input:focus {
-  background-color: #fff;
-  outline: 0;
+#submit-button {
+  width: 100px;
 }
 
 textarea {
   width: 100%;
   height: 150px;
-  border-radius: 20px;
-  padding: 15px;
-  box-sizing: border-box;
-  background-color: #FFFDE7;
-  border: 1px solid black;
-  box-shadow: 1px 1px 5px black;
 }
-
-textarea:focus {
-  background-color: #fff;
-  outline: 0;
-}
-
-#submit-button {
-  width: 110px;
-  border-radius: 20px;
-  background-color: #1A237E;
-  color: white;
-  font-size: 1.1em;
-  font-weight: bold;
-  border: 3px solid;
-}
-
-#submit-button:hover {
-  box-shadow: none;
-  cursor: pointer;
-}
-
-#submit-button:focus {
-  border-color: black;
-  outline: 0;
-}
-
-/* Mobile menu */
 
 #hamburger {
   width: 10px;
@@ -312,11 +273,11 @@ textarea:focus {
 }
 
 /*        *
- *        *
- * Footer *
- *        *
- *        *
- *        */
+   *        *
+   * Footer *
+   *        *
+   *        *
+   *        */
 
 footer {
   text-align: center;
@@ -332,14 +293,6 @@ footer {
   color: black;
 }
 
-a > i.fab {
-  text-decoration: none;
-}
-
-a > i.fab:hover {
-  color: blue;
-}
-
 #copyright {
   width: 60%;
   text-align: left;
@@ -351,19 +304,20 @@ a > i.fab:hover {
   text-align: right;
 }
 
-
+a.fab {
+  text-decoration: none;
+}
 
 /*        *
- *        *
- * Break  *
- * Points *
- *        *
- *        */
+   *        *
+   * Break  *
+   * Points *
+   *        *
+   *        */
 
 @media screen and (max-width: 799px) {
-  
-    /*  Mobile Menu  */
-  
+  /*  Mobile Menu  */
+
    .menu-list {
     position: absolute;
     background-color: #536dfe;
@@ -405,7 +359,7 @@ a > i.fab:hover {
     width: 80%;
   }
   #copyright {
-    font-size 0.8em;
+    font-size: 0.8em;
   }
 }
 
@@ -426,23 +380,19 @@ a > i.fab:hover {
 }
 
 @media screen and (min-width: 1300px) {
-  
   #contents {
     width: 1200px;
   }
 }
 
-
-
 /*                *
- *                *
- * Jquery Toggles *
- *                *
- *                *
- *                */
+   *                *
+   * Jquery Toggles *
+   *                *
+   *                *
+   *                */
 
 .active {
   transform: translateX(0px);
   transition: transform 0.3s ease;
-  
 }
