--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ header {
   text-align: center;
 }
 
-.project-text {
+a.project-text {
   position: relative;
   transform: rotate(15deg);
   top: -50%;
@@ -224,6 +224,8 @@ header {
   text-shadow: 0px 0px 5px black;
   user-select: none;
   cursor: pointer;
+  display: block;
+  text-decoration: none;
 }
 
 /*               *
