--- a/css/main.css
+++ b/css/main.css
@@ -6,39 +6,40 @@
  *          */
 
 body {
-  margin: 0;
-  background-color: #757575;
-  font-family: "Share", cursive;
-  overflow-x: hidden;
-  position: absolute;
-  width: 100%;
+    margin: 0;
+    background-color: #757575;
+    font-family: "Share", cursive;
+    overflow-x: hidden;
+    position: absolute;
+    width: 100%;
 }
 
 p {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 section {
-  padding-bottom: 60px;
+    padding-bottom: 60px;
 }
 
 .contents {
-  width: 100%;
-  background-color: #e0e0e0;
-  margin: auto;
-  box-shadow: 0 0 15px black;
-  padding-left: 30px;
-  padding-right: 30px;
-  box-sizing: border-box;
+    width: 100%;
+    background-color: #e0e0e0;
+    margin: auto;
+    box-shadow: 0 0 15px #000;
+    padding-left: 30px;
+    padding-right: 30px;
+    box-sizing: border-box;
 }
 
 .divider {
-  width: 100%;
-  height: 10px;
-  background-color: black;
-  transform: skew(70deg);
-  clear: both;
+    width: 100%;
+    height: 10px;
+    background-color: #000;
+    transform: skew(70deg);
+    clear: both;
 }
+
 
 /*            *
  *            *
@@ -48,58 +49,88 @@ section {
  *            */
 
 nav {
-  padding: 0;
-  width: 100%;
-  text-align: center;
-  background-color: #536dfe;
-  z-index: 100;
-  box-shadow: 0 3px 3px black;
-  position: relative;
-  height: 45px;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #536dfe;
+    z-index: 100;
+    box-shadow: 0 3px 3px #000;
+    position: relative;
+    height: 45px;
 }
 
 .menu-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .menu-item {
-  display: inline-block;
+    display: inline-block;
+    border: 1px solid transparent;
+    border-bottom: none;
+    border-radius: 100px 100px 0 0;
+}
+
+.menu-active,
+.menu-item:hover {
+    background-color: #e0e0e0;
+    border: 1px solid #000;
+    border-bottom: none;
 }
 
 .menu-item:hover {
-  background-color: #e0e0e0;
+    opacity: 0.8;
 }
 
 .menu-button {
-  font-family: "Audiowide", cursive;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 1.5em;
-  text-shadow: 0 0 10px white;
-  color: black;
-  text-decoration: none;
-  padding: 10px 50px;
-  display: block;
+    font-family: "Audiowide", cursive;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    text-shadow: 0 0 10px #fff;
+    color: #000;
+    text-decoration: none;
+    padding: 10px 50px;
+    display: block;
+}
+
+.menu-button:hover {
+    color: #B71C1C;
 }
 
 .fixed-header {
-  position: fixed;
-  top: 0;
-  left: 0;  
+    position: fixed;
+    top: 0;
+    left: 0;
 }
+
+/* Mobile menu */
+
+.mobile-menu {
+    width: 10px;
+    position: absolute;
+    right: 50px;
+    top: 3px;
+}
+
+.menu-icon {
+    font-size: 2em;
+    padding: 2px;
+}
+
 
 /* Fix padding on anchor links */
 
-h2::before, #about-anchor::before {
-  content: ' ';
-  display: block;
-  height: 60px;
-  margin-top: -60px;
-  visibility: hidden;
-  pointer-events: none;
+h2::before {
+    content: ' ';
+    display: block;
+    height: 100px;
+    margin-top: -100px;
+    visibility: hidden;
+    pointer-events: none;
 }
+
 
 /*        *
  *        *
@@ -108,50 +139,51 @@ h2::before, #about-anchor::before {
  *        *
  *        */
 
-
 header {
-  width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  background-color: #01579b;
-  color: white;
-  font-family: "Gugi", cursive;
-  font-size: 1.2em;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: #01579b;
+    color: #fff;
+    font-family: "Gugi", cursive;
+    font-size: 1.2em;
 }
 
 .left-head {
-  width: 10%;
-  padding-left: 10px;
+    width: 10%;
+    padding-left: 10px;
 }
 
 .logo {
-  margin: 20px;
-  height: 80px;
+    margin: 20px;
+    height: 80px;
 }
 
 .right-head {
-  width: 90%;
-  padding: 20px;
+    width: 90%;
+    padding: 20px;
 }
 
-.site-title-text, .sub-title-text {
-  text-align: right;
-  margin-right: 60px;
-  margin-bottom: 15px;
-  margin-top: 15px;
-  float: right;
-  display: inline;
-  text-shadow: 3px 3px 10px black;
-  padding: 0;
-  margin: 0;
-  transform: rotate(6deg);
-  user-select: none;
+.site-title-text,
+.sub-title-text {
+    text-align: right;
+    margin-right: 60px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    float: right;
+    display: inline;
+    text-shadow: 3px 3px 10px #000;
+    padding: 0;
+    margin: 0;
+    transform: rotate(6deg);
+    user-select: none;
 }
 
 .sub-title-text {
-  clear: both;
-  font-size: 1em;
+    clear: both;
+    font-size: 1em;
 }
+
 
 /*              *
  *              *
@@ -161,19 +193,20 @@ header {
  *              */
 
 .about-section {
-  width: 100%;
-  padding-top: 20px;
+    width: 100%;
+    padding-top: 20px;
 }
 
 .profile {
-  float: left;
-  margin: 10px;
-  width: 150px;
-  max-width: 100%;
-  border-radius: 20px;
-  border: 3px white solid;
-  box-shadow: 3px 3px 10px black;
+    float: left;
+    margin: 10px;
+    width: 150px;
+    max-width: 100%;
+    border-radius: 20px;
+    border: 3px solid #fff;
+    box-shadow: 3px 3px 10px black;
 }
+
 
 /*          *
  *          *
@@ -183,50 +216,52 @@ header {
  *          */
 
 .projects {
-  width: 100%;
+    width: 100%;
 }
 
 .projects-anchor {
-  clear: both;
+    clear: both;
 }
 
 .projects-container {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .project-image {
-  width: 200px;
-  max-width: 100%;
-  border: 8px solid black;
-  border-radius: 50%;
+    width: 200px;
+    max-width: 100%;
+    border: 8px solid #000;
+    border-radius: 50%;
 }
 
-.project-image:hover, .hoverImage {
-  border: 8px solid white;
-  box-shadow: 1px 1px 10px black;
-  cursor: pointer;
+.project-image:hover,
+.hoverImage {
+    border: 8px solid #fff;
+    box-shadow: 1px 1px 10px #000;
+    cursor: pointer;
 }
 
 .project-item {
-  width: 100%;
-  text-align: center;
+    width: 100%;
+    text-align: center;
 }
 
-a.project-text {
-  position: relative;
-  transform: rotate(15deg);
-  top: -50%;
-  font-size: 1.5em;
-  font-family: "Press Start 2P", cursive;
-  color: white;
-  text-shadow: 0px 0px 5px black;
-  user-select: none;
-  cursor: pointer;
-  display: block;
-  text-decoration: none;
+.project-text {
+    position: relative;
+    transform: rotate(15deg);
+    top: -50%;
+    font-size: 1.5em;
+    font-family: "Press Start 2P", cursive;
+    color: white;
+    text-shadow: 0px 0px 5px #000;
+    user-select: none;
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
 }
+
 
 /*               *
  *               *
@@ -236,89 +271,77 @@ a.project-text {
  *               */
 
 .contact {
-  width: 95%;
-  margin: auto;
+    width: 95%;
+    margin: auto;
 }
 
 .form-section {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 25px;
 }
 
 .label {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .label,
 .form-item {
-  width: 100%;
+    width: 100%;
 }
 
 input {
-  width: 100%;
-  border-radius: 20px;
-  padding: 5px;
-  box-sizing: border-box;
-  background-color: #FFFDE7;
-  border: 1px solid black;
-  box-shadow: 1px 1px 5px black;
+    width: 100%;
+    border-radius: 20px;
+    padding: 5px;
+    box-sizing: border-box;
+    background-color: #FFFDE7;
+    border: 1px solid #000;
+    box-shadow: 1px 1px 5px #000;
 }
 
 input:focus {
-  background-color: #fff;
-  outline: 0;
+    background-color: #fff;
+    outline: 0;
 }
 
 textarea {
-  width: 100%;
-  height: 150px;
-  border-radius: 20px;
-  padding: 15px;
-  box-sizing: border-box;
-  background-color: #FFFDE7;
-  border: 1px solid black;
-  box-shadow: 1px 1px 5px black;
+    width: 100%;
+    height: 150px;
+    border-radius: 20px;
+    padding: 15px;
+    box-sizing: border-box;
+    background-color: #FFFDE7;
+    border: 1px solid #000;
+    box-shadow: 1px 1px 5px #000;
 }
 
 textarea:focus {
-  background-color: #fff;
-  outline: 0;
+    background-color: #fff;
+    outline: 0;
 }
 
 .submit-button {
-  width: 110px;
-  border-radius: 20px;
-  background-color: #1A237E;
-  color: white;
-  font-size: 1.1em;
-  font-weight: bold;
-  border: 3px solid;
+    width: 110px;
+    border-radius: 20px;
+    background-color: #1A237E;
+    color: #fff;
+    font-size: 1.1em;
+    font-weight: bold;
+    border: 3px solid #fff;
 }
 
 .submit-button:hover {
-  box-shadow: none;
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .submit-button:focus {
-  border-color: black;
-  outline: 0;
+    border-color: black;
+    outline: 0;
+    background-color: black;
+    font-size: 1.2em;
 }
 
-/* Mobile menu */
-
-.hamburger {
-  width: 10px;
-  position: absolute;
-  right: 50px;
-  top: 3px;
-}
-
-.fa-bars {
-  font-size: 2em;
-  padding: 2px;
-}
 
 /*        *
  *        *
@@ -328,38 +351,34 @@ textarea:focus {
  *        */
 
 footer {
-  text-align: center;
-  font-family: monospace;
-  font-size: 1.5em;
-  padding-bottom: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+    text-align: center;
+    font-family: monospace;
+    font-size: 1.5em;
+    padding-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
-.fab {
-  color: black;
+.social-icons {
+    color: black;
+    text-decoration: none;
 }
 
-a > i.fab {
-  text-decoration: none;
-}
-
-a > i.fab:hover {
-  color: blue;
+.social-icons:hover {
+    color: blue;
 }
 
 .copyright {
-  width: 60%;
-  text-align: left;
-  font-size: 0.6em;
+    width: 60%;
+    text-align: left;
+    font-size: 0.6em;
 }
 
 .social {
-  width: 40%;
-  text-align: right;
+    width: 40%;
+    text-align: right;
 }
-
 
 
 /*        *
@@ -370,70 +389,73 @@ a > i.fab:hover {
  *        */
 
 @media screen and (max-width: 799px) {
-  
     /*  Mobile Menu  */
-  
-   .menu-list {
-    position: absolute;
-    background-color: #536dfe;
-    box-shadow: 3px 3px 3px black;
-    border-bottom-right-radius: 20px;
-    top: 44px;
-    transform: translateX(-999px);
-    text-align: left;
-  }
-  .menu-item {
-    display: block;
-  }
-  .menu-item:hover {
-    background: none;
-  }
-  .menu-button:hover {
-    color: #AD1457;
-  }
-  .menu-button {
-    text-shadow: none;
-    padding: 10px 20px 10px 10px;
-  }
+    .menu-list {
+        position: absolute;
+        background-color: #536dfe;
+        box-shadow: 3px 3px 3px #000;
+        border-bottom-right-radius: 20px;
+        top: 44px;
+        transform: translateX(-999px);
+        text-align: left;
+    }
+    .menu-item {
+        display: block;
+        border: none;
+    }
+    .menu-item:hover {
+        background: none;
+        border: none;
+    }
+    .menu-active {
+        border: none;
+        background: none;
+    }
+    .menu-button:hover {
+        color: #B71C1C;
+    }
+    .menu-button {
+        text-shadow: none;
+        padding: 10px 20px 10px 10px;
+    }
 }
 
 @media screen and (min-width: 800px) {
-  .hamburger {
-    display: none;
-  }
-  .contents {
-    width: 90%;
-  }
-  .project-item {
-    width: 50%;
-  }
-  .label {
-    width: 20%;
-  }
-  .form-item {
-    width: 80%;
-  }
-  .copyright {
-    font-size: 0.8em;
-  }
+    .mobile-menu {
+        display: none;
+    }
+    .contents {
+        width: 90%;
+    }
+    .project-item {
+        width: 50%;
+    }
+    .label {
+        width: 20%;
+    }
+    .form-item {
+        width: 80%;
+    }
+    .copyright {
+        font-size: 0.8em;
+    }
 }
 
 @media screen and (min-width: 1000px) {
-  .contact {
-    width: 50%;
-    margin: auto;
-  }
-  .contents {
-    width: 800px;
-  }
-  .project-item {
-    width: 33%;
-  }
-  .copyright {
-    font-size: 0.9em;
-  }
+    .contact {
+        width: 50%;
+        margin: auto;
+    }
+    .contents {
+        width: 800px;
+    }
+    .project-item {
+        width: 33%;
+    }
+    .copyright {
+        font-size: 0.9em;
+    }
 }
-
 
 
 /*                *
@@ -444,7 +466,6 @@ a > i.fab:hover {
  *                */
 
 .active {
-  transform: translateX(0px);
-  transition: transform 0.3s ease;
-  
+    transform: translateX(0px);
+    transition: transform 0.3s ease;
 }
