--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@
  *          *
  *          */
 
+ html, body {
+     box-sizing: border-box;
+ }
+
+ *, *:before, *:after {
+     box-sizing: inherit;
+ }
+
 body {
     margin: 0;
     background-color: #757575;
@@ -227,7 +235,6 @@ header {
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    text-align: center;
     width: 100%;
 }
 
@@ -238,32 +245,31 @@ header {
     border-radius: 50%;
 }
 
-.project-image:hover,
-.hoverImage {
-    border: 8px solid #fff;
-    box-shadow: 1px 1px 10px #000;
-    cursor: pointer;
-}
-
 .project-item {
     width: 100%;
-    text-align: center;
+    border-left: 5px solid #000;
+    border-radius: 30px;
+    margin-bottom: 15px;
+    padding: 15px;
 }
 
-.project-text {
-    position: relative;
-    transform: rotate(15deg);
-    top: -50%;
-    font-size: 1.5em;
-    font-family: "Press Start 2P", cursive;
-    color: white;
-    text-shadow: 0px 0px 5px #000;
-    user-select: none;
-    cursor: pointer;
-    display: block;
+.project-category {
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+
+.project-description {
+    padding-bottom: 10px;
+}
+
+.project-links a {
+    color: #8d0000;
     text-decoration: none;
 }
 
+.project-links a:hover {
+    color: #0b00a3;
+}
 
 /*               *
  *               *
