--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,10 @@ header {
     width: 100%;
 }
 
+.project-title {
+    margin: 0 0 10px 0;
+}
+
 .project-item {
     width: 100%;
     border-left: 5px solid #000;
@@ -238,7 +242,9 @@ header {
     border-radius: 30px;
     margin-bottom: 55px;
     box-sizing: border-box;
-    padding: 25px;
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 5px 5px 8px #000;
 }
 
 .project-category {
