--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@ header {
     color: #fff;
     font-family: "Gugi", cursive;
     font-size: 1.2em;
+    animation-name: headercolor;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
 }
 
 .left-head {
@@ -160,7 +164,23 @@ header {
 
 .logo {
     margin: 20px;
-    height: 80px;
+    height: 60px;
+    animation-name: logoimage;
+    animation-iteration-count: infinite;
+    animation-duration: 22s;
+}
+
+@keyframes headercolor {
+    0% {
+        background-color: #01579b;
+    }
+    50% {
+        transform: skew(-1deg);
+        
+    }
+    100% {
+        background-color: #01579b;
+    }
 }
 
 .right-head {
@@ -174,7 +194,6 @@ header {
     margin-bottom: 15px;
     margin-top: 15px;
     float: right;
-    display: inline;
     text-shadow: 3px 3px 10px #000;
     padding: 0;
     margin: 0;
